swagger spec is now per api folder. next up is forming typescript from openapi
